# MathematicsEngine

./: CMakeLists.txt  Config.h  README.md  benchmark_tests.cpp  benchmark_tests.h  main.cpp
Benchmarking/: CMakeLists.txt  benchmarking.h  timer.cpp
MathematicsEngine/: CMakeLists.txt  MathematicsEngine.h  MatrixAndVector.cpp
Test/: mathematics_test.cpp
